# agentic_ai

./: README.md  agent_memory.json  agent_memory_example.py  anomaly_detection.py  great_agent_memory_design.md  llama4.md  long_short_term_memory.md  long_short_term_memory.py  presentation.md  supervised_anomaly_detection.py
2024_AI_summary/: llm_stock_revenue.pages  pyproject.toml  summary2024.md
agent_memory_system/: GIT_SHORTCUTS_GUIDE.md  MEMORY_SYSTEM_GUIDE.md  README.md  agent_memory.json  experiment_log.md  git_shortcuts.sh  install_git_shortcuts.sh  langgraph_integration.py  memory_system.py  pyproject.toml  simple_demo.py  simple_memory_demo.json
ai_python_anomaly_detection/: CLAUDE.md
dalian_chen/: CLAUDE.md  gpt5_analysis.md  multi_agent_demo.py  project_analysis.md
dalian_chen/CASE-Advanced-Investment-Agent/: README.md  main_app.py  requirements.txt
dalian_chen/RAG-chen/: readme_cb.md  requirements.txt  requirements_mac.txt
dalian_chen/RAG-chen/data/stock_data/: answers_qwen_turbo_01.json  answers_qwen_turbo_01_debug.json
dalian_chen/RAG-chen/data/stock_data/debug_data/01_parsed_reports/: 【上海证券】中芯国际深度研究报告：晶圆制造龙头，领航国产芯片新征程.json  【东方证券】产能利用率提升，持续推进工艺迭代和产品性能升级.json  【中原证券】产能利用率显著提升，持续推进工艺迭代升级——中芯国际(688981)季报点评.json  (+5 more)
dalian_chen/RAG-chen/src/: ingestion.py
dalian_chen/multi_agent_system/: agents.py  cli.py  core_system.py  feedback_system.py  tools.py
dalianf/RAG-chen/: README.md  main.py
dalianf/RAG-chen/src/: pdf_parsing.py  pipeline.py
deepseek_exp/: deepseek_client.py  o1.md
open_manus_exp/: deepseek_client.py  pyproject.toml
