[project]
name = "agent-memory-system"
version = "0.1.0"
description = "Advanced long short-term memory system for AI agents"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]